jvm and ruby app definitions and erlang def updates